src/main/resources/scss/contacts/components/_swipe-to-reveal.scss
.swipers {
	overflow: hidden;
	& > div {
		margin-bottom: .25rem;
	}
}

.stro-container {
  width: 300%;
  margin-left: -100% ;
  position: relative;
}

.stro-container.transition-back {
  transition: all .4s ease;
}

.stro-left,
.stro-content,
.stro-right {
  position: relative;
  display: inline-block;
  width: 33.33333333%;
  height: 2.5rem;
  vertical-align: top;
}

.stro-button {
  position: absolute;
  height: 100%;
  width: 100%;
  &.caution {
	  background: $primary-red;
  }
}

.stro-button span {
  position: absolute;
  top: 50%;
  transform: translate(0, -50%);
  display: block;
}

.stro-button.stro-right-button {
  left: 0;
}
.stro-button.stro-right-button span {
  left: 0;
  text-align: center;
}
.stro-button.stro-left-button {
  right: 0;
}
.stro-button.stro-left-button span {
  right: 0;
  text-align: center;
}

.stro-container.show-right-buttons,
.stro-container.show-left-buttons,
.stro-container.show-right-buttons .stro-button,
.stro-container.show-left-buttons .stro-button{
  transition: all .3s ease;
}

